--- a/partials/footer.html
+++ b/partials/footer.html
@@ -9,7 +9,7 @@
                 <a href="http://www.twitter.com/evenancio" style="font-size: 2em; color: black;"><i class="icon-twitter-sign"></i> @evenancio</a>
             </div>
             <div class="col-lg-3 col-md-3">
-                <a href="#" style="font-size: 2em; color: black;"><i class="icon-linkedin-sign"></i> linkedin</a>
+                <a href="http://br.linkedin.com/in/evandrovenancio/" style="font-size: 2em; color: black;"><i class="icon-linkedin-sign"></i> linkedin</a>
             </div>
             <div class="col-lg-3 col-md-3">
                 <a href="http://google.com/+EvandroVenancio" style="font-size: 2em; color: black;"><i class="icon-google-plus-sign"></i> google_plus</a>
